k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-template
spec:
  selector:
    app: fastapi-template
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
